# mfi-custom-code

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakelists.txt  LICENSE  README.md  edit-buildroot-config.sh  edit-uclibc-config.sh  hello.cpp
.github/: copilot-instructions.md
.github/workflows/: build.yml
br2/: .config  CMakeLists.txt  external.desc
br2/board/ubiquiti/mfi/: uclibc.config
br2/configs/: mfi_defconfig
cmake/: AddProjectVersionData.cmake  AddProjectVersionData.h.in  FindCLI11.cmake  Findcivetweb.cmake  Findmongoose.cmake
docs/: building.md  cfgmtd.md  deploying.md  mfi-notes.md  updating.md
hass_mqtt_device/: CHANGELOG.md  CMakeLists.txt  README.md
hass_mqtt_device/include/hass_mqtt_device/core/: device_base.h  function_base.h  helper_functions.hpp  mqtt_connector.h
hass_mqtt_device/include/hass_mqtt_device/functions/: dimmable_light.h  number.h  on_off_light.h  sensor.h  switch.h
hass_mqtt_device/include/hass_mqtt_device/logger/: logger.hpp
hass_mqtt_device/src/core/: device_base.cpp  function_base.cpp  mqtt_connector.cpp
hass_mqtt_device/src/devices/: on_off_light.cpp  switch.cpp
hass_mqtt_device/src/functions/: dimmable_light.cpp  number.cpp  on_off_light.cpp  sensor.cpp  switch.cpp
mfi/: CHANGELOG.md  CMakeLists.txt  README.md
mfi-cli/: CHANGELOG.md  CMakeLists.txt  README.md
mfi-cli/includes/mfi_cli/: config_command.h  helpers.h  info_command.h  led_command.h  relay_command.h  sensor_command.h  update_command.h
mfi-cli/src/: main.cpp
mfi-cli/src/mfi_cli/: config_command.cpp  info_command.cpp  led_command.cpp  relay_command.cpp  sensor_command.cpp  update_command.cpp
mfi-mqtt-client/: CHANGELOG.md  CMakeLists.txt  README.md
mfi-mqtt-client/includes/ha/: command.h  discoverable.h  discoverable_domain.h  multi_value_sensor.h  sensor.h  single_value_sensor.h
mfi-mqtt-client/includes/mfi_mqtt/: mfi_mqtt_client.h
mfi-mqtt-client/includes/mfi_mqtt_client/: device.h  mfi_device.h  mfi_sensor.h  options.h  port.h
mfi-mqtt-client/includes/mfi_mqtt_client/functions/: current.h  power.h  voltage.h
mfi-mqtt-client/src/: main.cpp
mfi-mqtt-client/src/ha/: discoverable.cpp  sensor.cpp
mfi-mqtt-client/src/mfi_mqtt/: mfi_mqtt_client.cpp
mfi-mqtt-client/src/mfi_mqtt_client/: device.cpp  mfi_device.cpp  mfi_sensor.cpp  options.cpp  port.cpp
mfi-mqtt-client/src/mfi_mqtt_client/functions/: current.cpp  power.cpp  voltage.cpp
mfi-rest-server/: CHANGELOG.md  CMakeLists.txt  README.md
mfi-rest-server/includes/: string_helpers.h
mfi-rest-server/includes/mfi_server/: mfi_http_server.h  options.h
mfi-rest-server/includes/mg/: server.h
mfi-rest-server/src/: main.cpp
mfi-rest-server/src/mfi_server/: mfi_http_server.cpp  options.cpp
mfi-rest-server/src/mg/: http_message.cpp  http_response.cpp
mfi-server/: CMakeLists.txt
mfi-server/includes/: join.h  mfi_server.h  options.h
mfi-server/includes/mfi_server/: mfi_http_server.h
mfi-server/includes/mg/: connection.h  http_message.h  http_server.h  logger.h  strings.h
mfi-server/src/: main.cpp  mfi_http_server.cpp  mfi_server.cpp  options.cpp
mfi-server/src/mfi_server/: mfi_http_server.cpp
mfi-server/src/mg/: connection.cpp  http_message.cpp  http_server.cpp  server.cpp
mfi-update/: CHANGELOG.md  CMakeLists.txt  README.md
mfi-update/includes/: mfi_update.h
mfi-update/includes/mfi_update/: config.h  downloader.h  periodic_updater.h  release.h  semver.h  updater.h
mfi-update/src/mfi_update/: config.cpp  downloader.cpp  periodic_updater.cpp  release.cpp  semver.cpp  updater.cpp
mfi/includes/: FileWatch.hpp  mfi.h
mfi/includes/mfi/: board.h  board_info.h  config.h  led.h  sensor.h
mfi/src/mfi/: board.cpp  board_info.cpp  config.cpp  led.cpp  sensor.cpp
mgpp/: CHANGELOG.md  CMakeLists.txt  README.md
mgpp/includes/mg/: connection.h  event.h  eventing_handler.h  http_message.h  http_response.h  http_server.h  logger.h  manager.h  mqtt_client.h  mqtt_command.h  mqtt_message.h  mqtt_options.h  mqtt_property.h  server.h  strings.h  timer.h
mgpp/src/mg/: connection.cpp  eventing_handler.cpp  http_message.cpp  http_response.cpp  http_server.cpp  logger.cpp  manager.cpp  mqtt_client.cpp  mqtt_message.cpp  mqtt_options.cpp  mqtt_property.cpp  server.cpp  timer.cpp
shmuelie-shared/: CHANGELOG.md  CMakeLists.txt  README.md
shmuelie-shared/includes/shmuelie/: docopt_options.h  string_helpers.h  string_helpers.hpp
shmuelie-shared/src/shmuelie/: docopt_options.cpp  string_helpers.cpp
tests/: CMakeLists.txt  cli_smoke.sh  rest_smoke.sh  test_cli_helpers.cpp  test_config.cpp  test_device_base.cpp  test_hass_functions.cpp  test_helper_functions.cpp  test_mfi_hardware.cpp  test_string_helpers.cpp  test_update.cpp
