cmake_minimum_required(VERSION 3.21)
project(mFiCustomCode)

find_package(CLI11 REQUIRED)

set(MFI_CLI_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/includes)
set(MFI_CLI_HEADERS
	${MFI_CLI_INCLUDE}/mfi_cli/info_command.h
)
set(MFI_CLI_SOURCE_CODE
	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/src/mfi_cli/info_command.cpp
)
set(MFI_CLI_VERSION 1.0.0.0)
add_executable(${MFI_CLI_TARGET_NAME}
	${MFI_CLI_HEADERS}
	${MFI_CLI_SOURCE_CODE}
)
set_target_properties(${MFI_CLI_TARGET_NAME} PROPERTIES
	CXX_STANDARD 20
	CXX_EXTENSIONS OFF
	VERSION ${MFI_CLI_VERSION}
)
target_include_directories(${MFI_CLI_TARGET_NAME} PUBLIC ${MFI_CLI_INCLUDE})
target_link_libraries(${MFI_CLI_TARGET_NAME} PUBLIC ${MFI_API_TARGET_NAME} ${SHMUELIE_SHARED_TARGET_NAME} CLI11::CLI11)
target_compile_definitions(${MFI_CLI_TARGET_NAME} PRIVATE MFI_CLI_VERSION=${MFI_CLI_VERSION})
