cmake_minimum_required(VERSION 3.21)
project(
	${MFI_SERVER_TARGET_NAME}
	VERSION 1.1.0.0
	DESCRIPTION "REST API for Ubiquiti's mFi Devices"
	HOMEPAGE_URL "https://github.com/shmuelie/mfi-custom-code"
)

set(MFI_SERVER_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/includes)
set(MFI_SERVER_HEADERS
	${MFI_SERVER_INCLUDE}/mfi_server/mfi_http_server.h
)
set(MFI_SERVER_SOURCE_CODE
	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/src/mfi_server/mfi_http_server.cpp
)
find_package(CLI11 REQUIRED)
add_executable(${MFI_SERVER_TARGET_NAME}
	${MFI_SERVER_HEADERS}
	${MFI_SERVER_SOURCE_CODE}
)
set_target_properties(${MFI_SERVER_TARGET_NAME} PROPERTIES
	CXX_STANDARD 20
	CXX_EXTENSIONS OFF
)
ADD_VERSION_INFO(${MFI_SERVER_TARGET_NAME})
target_include_directories(${MFI_SERVER_TARGET_NAME} PUBLIC ${MFI_SERVER_INCLUDE})
target_link_libraries(${MFI_SERVER_TARGET_NAME} PUBLIC ${MFI_API_TARGET_NAME} ${SHMUELIE_SHARED_TARGET_NAME} ${MGPP_TARGET_NAME} CLI11::CLI11)
