cmake_minimum_required(VERSION 3.21)
project(mFiCustomCode)

set(SHMUELIE_SHARED_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/includes)
set(SHMUELIE_SHARED_HEADERS
	${SHMUELIE_SHARED_INCLUDES}/shmuelie/string_helpers.hpp
	${SHMUELIE_SHARED_INCLUDES}/shmuelie/docopt_options.h
)
set(SHMUELIE_SHARED_SOURCE_CODE
	${CMAKE_CURRENT_SOURCE_DIR}/src/shmuelie/docopt_options.cpp
)

add_library(${SHMUELIE_SHARED_TARGET_NAME} STATIC
	${SHMUELIE_SHARED_HEADERS}
	${SHMUELIE_SHARED_SOURCE_CODE}
)
set_target_properties(${SHMUELIE_SHARED_TARGET_NAME} PROPERTIES
	CXX_STANDARD 20
	CXX_EXTENSIONS OFF
	VERSION 1.0.0.0
)
target_include_directories(${SHMUELIE_SHARED_TARGET_NAME} PUBLIC ${SHMUELIE_SHARED_INCLUDES})
target_link_libraries(${SHMUELIE_SHARED_TARGET_NAME} PUBLIC docopt)